syntax = "proto3";

package xsvm;

option go_package = "github.com/ava-labs/avalanchego/proto/pb/xsvm";

service Ping {
  rpc Ping(PingRequest) returns (PingReply);
  rpc StreamPing(stream PingRequest) returns (stream PingReply);
}

message PingRequest {
  string message = 1;
}

message PingReply {
  string message = 1;
}
